# purr

./: COPYRIGHT  Cargo.toml  LICENSE  LICENSE-MIT  README.md
src/: atom.rs  bare_atom.rs  bond.rs  bracket_atom.rs  builder.rs  element.rs  error.rs  lib.rs  match_styles.rs  mol.rs  parity.rs  scanner.rs  smiles_to_mol.rs  style.rs  symbol.rs
src/feature/: aliphatic.rs  aromatic.rs  atom_kind.rs  bond_kind.rs  bracket_aromatic.rs  charge.rs  configuration.rs  element.rs  mod.rs  number.rs  rnum.rs  virtual_hydrogen.rs
src/graph/: atom.rs  bond.rs  builder.rs  error.rs  from_tree.rs  join_pool.rs  map_bonds.rs  mod.rs  reconcile.rs  reconcile_bonds.rs  trace.rs
src/mol/: atom.rs  bond.rs  builder.rs  element.rs  error.rs  match_styles.rs  mod.rs  mol.rs  nub.rs
src/parts/: aliphatic.rs  aromatic.rs  atom_kind.rs  bond_kind.rs  bracket_aromatic.rs  bracket_symbol.rs  charge.rs  configuration.rs  element.rs  mod.rs  number.rs  parity.rs  virtual_hydrogen.rs
src/read/: bare_atom.rs  bracket_atom.rs  error.rs  missing_character.rs  mod.rs  read.rs  read_bare_atom.rs  read_bond.rs  read_bracket.rs  read_bracket_atom.rs  read_charge.rs  read_configuration.rs  read_number.rs  read_organic.rs  read_parity.rs  read_rnum.rs  read_symbol.rs  reading.rs  scanner.rs  symbol.rs  trace.rs
src/tree/: atom.rs  error.rs  follower.rs  from_graph.rs  join_pool.rs  link.rs  mod.rs  rnum.rs  target.rs  walk.rs  writer.rs
src/util/: mod.rs  scanner.rs
src/valence/: error.rs  hypovalence.rs  implicit_hydrogens.rs  mod.rs  (+3 more)
tests/: integration_tests.rs  round_trip.rs  round_trip.smi
(+11 files in other folders)
